# league-of-clash

./: .dockerignore  Cargo.toml  README.md  dump.rdb
.github/workflows/: master_leagueofclash.yml  rust.yml
cli/: Cargo.toml
cli/src/: main.rs
data/: Cargo.toml
data/src/: constants.rs  dataset.rs  main.rs  riot.rs  ugg.rs
data/src/champion/: champion.rs  champion_stats.rs  duos.rs  matchups.rs  mod.rs
frontend/: .env  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/public/: dataset.json
frontend/scripts/: wasm-change.sh
frontend/src/api/: ddragon.tsx
frontend/src/components/ban/: Ban.tsx  BanPanel.tsx  Bans.tsx
frontend/src/components/champion/: ChampionInfo.tsx  ChampionOption.tsx  ChampionPanel.tsx  ChampionSelect.tsx  ChampionSelectPanel.tsx  ChampionStats.tsx
frontend/src/components/svg/: BackIcon.tsx  ClashLogo.tsx  PersonIcon.tsx  Spinner.tsx  TeamHeader.tsx  TeamIcon.tsx
frontend/src/components/svg/roles/: BottomIcon.tsx  JungleIcon.tsx  MidIcon.tsx  SupportIcon.tsx  TopIcon.tsx
frontend/src/components/team/: Ban.tsx  Bans.tsx  ChampionStats.tsx  Phase.tsx  PickBanPhasePanel.tsx  PickBanSummary.tsx  PlayerStats.tsx
frontend/src/constants/: constants.ts
frontend/src/context/: DraftContext.ts
frontend/src/models/: Action.ts  IBan.ts  IChampion.ts  IChampionRolePlayerPrediction.ts  IChampionStats.ts  IPlayerStats.ts  Phase.ts  Team.ts
frontend/src/modules/websocket/: Message.ts  WebSocketManager.ts
frontend/src/pages/: _app.tsx  index.tsx
frontend/src/pages/team/: [team].tsx
frontend/src/pages/team/[allyTeam]/: [enemyTeam].tsx
frontend/src/store/: DraftStore.tsx
frontend/src/styles/: globals.css  nprogress.css
frontend/src/utils/: role.ts  winrate.ts
functions/: Cargo.toml  deploy.sh  gcc-arm-10.2-2020.11-mingw-w64-i686-arm-none-linux-gnueabihf.tar.xz:Zone.Identifier  host.json  run.sh
functions/src/: main.rs
graphql/: .graphqlconfig  match_history_query.graphql
league-of-clash/: Cargo.toml  build-wasm.sh  index.html
league-of-clash/graphql/: match_history_query.graphql  profile_ranks_query.graphql  ugg_schema.json
league-of-clash/pkg/: league_of_clash.d.ts  league_of_clash.js  league_of_clash_bg.js  league_of_clash_bg.wasm  league_of_clash_bg.wasm.d.ts  package.json
league-of-clash/src/: lib.rs
league-of-clash/src/bans/: ban_creator.rs  ban_set.rs  mod.rs
league-of-clash/src/champion_role_player_predictor/: champion_role_player_prediction.rs  draft_prediction.rs  mod.rs
league-of-clash/src/champion_score/: champion_score_tracker.rs  mod.rs  weighted_calculator.rs  wr_calculator.rs
league-of-clash/src/champion_stats/: champion_stats.rs  champion_stats_creator.rs  mod.rs
league-of-clash/src/draft/: mod.rs
league-of-clash/src/matches/: mod.rs
league-of-clash/src/player_stats/: mod.rs
league-of-clash/src/role_stats/: mod.rs  role_stats.rs  role_stats_creator.rs
league-of-clash/src/team/: mod.rs
league-of-clash/src/ugg/: match_history.rs  mod.rs  profile.rs  team.rs
league-of-clash/src/utils/: stats.rs
league-of-clash/src/web/: mod.rs
league_of_clash/: Cargo.toml  index.html
league_of_clash/graphql/: profile_ranks_query.graphql
league_of_clash/src/: lib.rs
league_of_clash/src/bans/: ban.rs  ban_creator.rs  ban_set.rs  bans.rs  mod.rs
league_of_clash/src/champion_score/: champion_score_tracker.rs
league_of_clash/src/champion_stats/: champion_score.rs  champion_stats.rs  champion_stats_creator.rs  mod.rs
league_of_clash/src/matches/: mod.rs
league_of_clash/src/team/: mod.rs
league_of_clash/src/ugg/: match_history.rs  mod.rs  profile.rs
league_of_clash/src/utils/: mod.rs
league_of_clash/src/web/: mod.rs
shared/: Cargo.toml
shared/src/: champion_stats.rs  dataset.rs  duo.rs  lib.rs  matchup.rs  rank.rs  region.rs  role.rs  stats.rs
src/: main.rs
src/ugg/: match_history.rs  mod.rs  profile.rs
web/: Cargo.toml  Dockerfile  rpi.sh  tree.txt
web/src/: main.rs
web/src/websocket/: mod.rs  ws_connection.rs  ws_events.rs  ws_message.rs  ws_room.rs  ws_server.rs
