[package]
name = "league-of-clash"
version = "0.1.0"
authors = ["Vigo Vlugt <vigovlugt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-tungstenite = "*"
log = "0.4.0"
env_logger = "0.8.3"
tokio = { version = "1", features = ["full"] }
futures = "0.3.15"
graphql_client = "0.9.0"
reqwest = { version = "0.11.3", features = ["json"] }
serde = "1.0.126"
time="*"