[package]
name = "league-of-clash-data"
version = "0.1.0"
authors = ["vigovlugt <vigovlugt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
league-of-clash-shared = {path = "../shared"}
reqwest = { version = "0.11.3", default-features = false, features = ["json", "rustls-tls"] }
log = "0.4.14"
pretty_env_logger = "0.4.0"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
structopt = "0.3"
tokio = { version = "1", features = ["full"] }
serde_repr = "0.1.7"
regex = "1"
futures = "0.3.15"