[package]
name = "league-of-clash"
version = "0.1.0"
authors = ["Vigo Vlugt <vigovlugt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4.0"
serde = {version="1.0.126", features = ["derive"] }
time="0.2.26"
itertools="0.10.0"
chrono="0.4.19"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
futures = "0.3.15"
graphql_client = "0.9.0"
reqwest = { version = "0.10.10", default-features = false, features = ["json", "rustls-tls"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen={ version = "0.2.74", features = ["serde-serialize"] }
wasm-bindgen-futures="0.4.24"
console_error_panic_hook="0.1.6"