[package]
name = "league_of_clash"
version = "0.1.0"
authors = ["Vigo Vlugt <vigovlugt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.0"
futures = "0.3.15"
graphql_client = "0.9.0"
reqwest = { version = "0.11.3", features = ["json"] }
serde = "1.0.126"
time="0.2.26"
itertools="0.10.0"
chrono="0.4.19"
