[package]
name = "league-of-clash-web"
version = "0.1.0"
authors = ["vigovlugt <vigovlugt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
league-of-clash = {path = "../league-of-clash"}
actix-web={features=["rustls"], version="3.3.2"}
env_logger="0.8.3"