[package]
name = "league-of-clash-web"
version = "0.1.0"
authors = ["vigovlugt <vigovlugt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
league-of-clash = {path = "../league-of-clash"}
actix-web={features=["rustls"], version="3.3.2"}
actix-cors="0.5.4"
env_logger="0.8.3"
actix-web-actors="3.0.0"
actix="0.10.0"
uuid = { version = "0.8", features = ["v4", "v5", "serde"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
